# libalac

./: CMakeLists.txt
libalac/: CMakeLists.txt
libalac-c/: CMakeLists.txt
libalac-c-example/: CMakeLists.txt
libalac-c-example/src/: main.cpp
libalac-c/include/libalac-c/: ALACDecoder.h  ALACEncoder.h
libalac-c/src/: ALACDecoder.cpp  ALACEncoder.cpp
libalac-convert_utility/: CMakeLists.txt
libalac-convert_utility/src/: CAFFileALAC.h  main.cpp
